--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <body>
 <div id = "app"></div>
-<script src="bundle.js"></script>
-
+<script src="/public/client.js"></script>
 </body>
 
 </html>
